--- a/admin/views/layout.pug
+++ b/admin/views/layout.pug
@@ -2,9 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(href="/stylesheets/layui.min.css")
   body
     div study
     block content
-    script(src='/javascripts/jquery.js')
-    script(src='/javascripts/bootstrap.js')
+    script(src="/javascripts/layui.all.js")
