--- a/admin/views/layout.pug
+++ b/admin/views/layout.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title= title
-    link(href="/stylesheets/layui.min.css")
+    link(href="/layui/layui.min.css")
+    block css
   body
-    div study
     block content
-    script(src="/javascripts/layui.all.js")
+    script(src="/layui/layui.js")
+    block js
