--- a/admin/views/login/index.pug
+++ b/admin/views/login/index.pug
@@ -1,12 +1,17 @@
 extends ../layout
 
+block css
+  link(rel="stylesheet", href="./stylesheets/login/index.css")
+
 block content
-  h1= title
-  form(action="/login"  method="post")
-    div 
-      span 用户名 
-      input(type="text" name="id")
-    div
-      span 密码 
-      input(type="password" name="psw")
-    button(type="submit" class="btn btn-success") 登录
+  div(class="wrapper")
+    form(action="/login"  method="post")
+      div 
+        span 用户名 
+        input(type="text" name="id")
+      div
+        span 密码 
+        input(type="password" name="psw")
+      button(type="submit" class="btn btn-success") 登录
+
+block js
