--- a/admin/views/login/index.pug
+++ b/admin/views/login/index.pug
@@ -13,43 +13,24 @@ block content
   //-       span 密码 
   //-       input(type="password" name="psw")
   //-     button(type="submit" class="btn btn-success") 登录
-  <div class="x-mark">
-    <div class="container">
-      <div class="left"></div>
-      <div class="right"></div>
-    </div>
-  </div>
-  <div class="intro-container">
-    <h1>ONE WITH AN EVERLASTING DESIRE <br> FOR THE UNKNOWN & UNTOLD</h1>
-    <div class="button shift-camera-button">
-      <div class="border">
-        <div class="left-plane"></div>
-        <div class="right-plane"></div>
-      </div>	
-      <div class="text">To The Stars</div>
-    </div>
-  </div>
-  <div class="sky-container">
-    <div class="text-right sky-container__left">
-      <h2 class="portfolio">
+  div(class="x-mark")
+    div(class="container")
+      div(class="left")
+      div(class="right")
+  div(class="intro-container")
+    div(class="button shift-camera-button")
+      div(class="border")
+        div(class="left-plane")
+        div(class="right-plane")
+      div(class="text") 登陆
+  div(class="sky-container")
+    div(class="text-right sky-container__left")
+      h2(class="portfolio")
         //- PORTFOLIO
-      </h2>
-      <h2 class="resurrection">
+      h2(class="resurrection")
         //- resurrection	
-      </h2>
-    </div>
-    <div class="text-left sky-container__right">
-      <h2 class="08">
-        08
-      </h2>
-      <h2 class="thirty-one">
-        31
-      </h2>
-      <h2 class="2016">
-        2016
-      </h2>
-    </div>
-  </div>
+    div(class="text-left sky-container__right")
+      div 登陆成功
 block js
   script(src="/javascripts/jquery.min.js")
   script(src="/javascripts/TweenMax.min.js")
