--- a/admin/public/stylesheets/login/index.styl
+++ b/admin/public/stylesheets/login/index.styl
@@ -13,6 +13,8 @@ body {
   margin: 0 auto;
   right: 0;
   left: 0;
+  display flex 
+  justify-content center
 }
 
 h1 {
@@ -223,4 +225,8 @@ h1 {
   bottom: 7px;
   left: 7px;
   color: #E62117;
+}
+
+form{
+  width 40%;
 }
