--- a/admin/views/layout.pug
+++ b/admin/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(href="/layui/layui.min.css")
+    link(rel="stylesheet" href="/layui/layui.css")
     block css
   body
     block content
