--- a/admin/views/layout.pug
+++ b/admin/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     title= title
     link(rel="stylesheet" href="/layui/layui.css")
+    link(rel="stylesheet", href="/stylesheets/style.css")
     block css
   body
     block content
