--- a/admin/views/main/index.pug
+++ b/admin/views/main/index.pug
@@ -7,9 +7,9 @@ block content
                 a(href="#") 账单管理
                 dl(class="layui-nav-child")
                     dd 
-                        a(href="#") 进账管理
+                        a(href="main/orderInto") 进账管理
                     dd 
-                        a(href="#") 出账管理
+                        a(href="main/orderOut") 出账管理
                     dd
                         a(href="#") aaa
             li(class="layui-nav-item layui-nav-itemed")
