--- a/admin/views/login/index.pug
+++ b/admin/views/login/index.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block css
-  link(rel="stylesheet", href="./stylesheets/login/index.css")
+  link(rel="stylesheet", href="/stylesheets/login/index.css")
 
 block content
   //- div(class="wrapper")
