--- a/admin/views/login/index.pug
+++ b/admin/views/login/index.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block css
   link(rel="stylesheet", href="/stylesheets/login/index.css")
-
+  link(rel="stylesheet", href="/layui/css/layui.css")
 block content
   //- div(class="wrapper")
   //-   form(action="/login"  method="post")
