--- a/admin/public/stylesheets/style.styl
+++ b/admin/public/stylesheets/style.styl
@@ -3,3 +3,176 @@ html,body
     height 100%
 .d-flex
     display flex
+.justify-content-center
+    justify-content center
+.algin-items-center
+    align-items center 
+.w-40
+    width 40%
+.mt-5
+    margin-top 3rem
+.mt-4
+    margin-top 1.5rem
+.mt-3 
+    margin-top 1rem
+.mt-2 
+    margin-top .5rem
+.mt-1 
+    margin-top .25rem
+.ml-5
+    margin-left  3rem
+.ml-4
+    margin-left 1.5rem
+.ml-3 
+    margin-left 1rem
+.ml-2 
+    margin-left .5rem
+.ml-1 
+    margin-left .25rem
+.mr-5
+    margin-right  3rem
+.mr-4
+    margin-right 1.5rem
+.mr-3 
+    margin-right 1rem
+.mr-2 
+    margin-right .5rem
+.mr-1 
+    margin-right .25rem
+.mb-5
+    margin-bottom  3rem
+.mb-4
+    margin-bottom 1.5rem
+.mb-3 
+    margin-bottom 1rem
+.mb-2 
+    margin-bottom .5rem
+.mb-1 
+    margin-bottom .25rem
+
+
+
+.pt-5
+    padding-top 3rem
+.pt-4
+    padding-top 1.5rem
+.pt-3 
+    padding-top 1rem
+.pt-2 
+    padding-top .5rem
+.pt-1 
+    padding-top .25rem
+.pl-5
+    padding-left  3rem
+.pl-4
+    padding-left 1.5rem
+.pl-3 
+    padding-left 1rem
+.pl-2 
+    padding-left .5rem
+.pl-1 
+    padding-left .25rem
+.pr-5
+    padding-right  3rem
+.pr-4
+    padding-right 1.5rem
+.pr-3 
+    padding-right 1rem
+.pr-2 
+    padding-right .5rem
+.pr-1 
+    padding-right .25rem
+.pb-5
+    padding-bottom  3rem
+.pb-4
+    padding-bottom 1.5rem
+.pb-3 
+    padding-bottom 1rem
+.pb-2 
+    padding-bottom .5rem
+.pb-1 
+    padding-bottom .25rem
+
+.mx-5{
+    margin-left 3rem
+    margin-right 3rem
+}
+.mx-4{
+    margin-left 1.5rem
+    margin-right 1.5rem
+}
+.mx-3{
+    margin-left 1rem
+    margin-right 1rem
+}
+.mx-2{
+    margin-left .5rem
+    margin-right .5rem
+}
+.mx-1{
+    margin-left .25rem
+    margin-right .25rem
+}
+
+.px-5{
+    padding-left 3rem
+    padding-right 3rem
+}
+.px-4{
+    padding-left 1.5rem
+    padding-right 1.5rem
+}
+.px-3{
+    padding-left 1rem
+    padding-right 1rem
+}
+.px-2{
+    padding-left .5rem
+    padding-right .5rem
+}
+.px-1{
+    padding-left .25rem
+    padding-right .25rem
+}
+
+.my-5{
+    margin-top 3rem
+    margin-bottom 3rem
+}
+.my-4{
+    margin-top 1.5rem
+    margin-bottom 1.5rem
+}
+.my-3{
+    margin-top 1rem
+    margin-bottom 1rem
+}
+.my-2{
+    margin-top .5rem
+    margin-bottom .5rem
+}
+.my-1{
+    margin-top .25rem
+    margin-bottom .25rem
+}
+
+.py-5{
+    padding-top 3rem
+    padding-bottom 3rem
+}
+.py-4{
+    padding-top 1.5rem
+    padding-bottom 1.5rem
+}
+.py-3{
+    padding-top 1rem
+    padding-bottom 1rem
+}
+.py-2{
+    padding-top .5rem
+    padding-bottom .5rem
+}
+.py-1{
+    padding-top .25rem
+    padding-bottom .25rem
+}
