--- a/admin/views/layout.pug
+++ b/admin/views/layout.pug
@@ -8,4 +8,5 @@ html
     block content
     script(src="/layui/layui.js")
     script(src="/javascripts/jquery.min.js")
+    script(src="/javascripts/util/time.js")
     block js
