--- a/admin/public/stylesheets/style.styl
+++ b/admin/public/stylesheets/style.styl
@@ -7,8 +7,27 @@ html,body
     justify-content center
 .algin-items-center
     align-items center 
+.w-10
+    width 10%
+.w-20
+    width 20%
+.w-30
+    width 30%
 .w-40
     width 40%
+.w-50
+    width 50%
+.w-60
+    width 60%
+.w-70
+    width 70%
+.w-80
+    width 80%
+.w-90
+    width 90%
+.w-100
+    width 100%
+
 .mt-5
     margin-top 3rem
 .mt-4
