--- a/admin/views/main/index.pug
+++ b/admin/views/main/index.pug
@@ -4,8 +4,8 @@ block css
     link(rel="stylesheet", href="/layui/css/layui.css")
     link(rel="stylesheet", href="/stylesheets/main/main.css")
 block content
-    div(class="d-flex")
-        ul(class="layui-nav layui-nav-tree")
+    div(class="d-flex mh-100")
+        ul(class="layui-nav layui-nav-tree mh-100")
             li(class="layui-nav-item layui-nav-itemed")
                 a(href="#") 账单管理
                 dl(class="layui-nav-child")
