--- a/admin/views/main/order_in.pug
+++ b/admin/views/main/order_in.pug
@@ -3,3 +3,50 @@ extends ./index
 block tree_content
     div(class="tree_content")
         table(id="demo" lay-filter="orderInto")
+        form(class="layui-form mt-4 modal" action="/order/add" method="post")
+            input(type="hidden" name="id")
+            div(class="d-flex justify-content-center")
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 名称
+                    div(class="layui-input-block")
+                        input(type="text" name="name" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input")
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 创建时间
+                    div(class="layui-input-block")
+                        input(type="text" class="layui-input" name="createtime" data-target="datepicker" autocomplete="off")
+            div(class="d-flex justify-content-center")
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 创建状态
+                    div(class="layui-input-block")
+                        input(type="radio" name="finished" value="1" title="是")
+                        input(type="radio" name="finished" value="0" title="否")
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 完成时间
+                    div(class="layui-input-block")
+                        input(type="text" class="layui-input" name="finishtime" data-target="datepicker1" autocomplete="off")
+            div(class="d-flex justify-content-center")
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 订单利润
+                    div(class="layui-input-block")
+                        input(type="text" name="profit" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input")
+                    
+                div(class="layui-form-item w-40")
+                    label(class="layui-form-label") 订单类型
+                    div(class="layui-input-block")
+                        select(name="type" lay-verify="")
+                            option(value="0") 入账
+                            option(value="1") 出账
+                            option(value="2") 记账
+            div(class="d-flex justify-content-center")
+                div(class="layui-form-item w-80")
+                    label(class="layui-form-label") 备注
+                    div(class="layui-input-block")
+                        textarea(name="remake" placeholder="请输入内容" class="layui-textarea")
+            div(class="d-flex justify-content-center")
+                div(class="layui-form-item")
+                    div(class="layui-input-block")
+                        button(class="layui-btn px-5" lay-submit lay-filter="formDemo") 确认
+                div(class="layui-form-item")
+                    div(class="layui-input-block")
+                        button(type="reset" class="layui-btn px-5 layui-btn-primary") 重置
+            
