--- a/admin/views/main/order_in.pug
+++ b/admin/views/main/order_in.pug
@@ -34,7 +34,7 @@ block tree_content
                     label(class="layui-form-label") 订单类型
                     div(class="layui-input-block")
                         select(name="type" lay-verify="")
-                            option(value="0") 入账
+                            option(value="0") 进账
                             option(value="1") 出账
                             option(value="2") 记账
             div(class="d-flex justify-content-center")
