--- a/admin/views/main/index.pug
+++ b/admin/views/main/index.pug
@@ -26,4 +26,5 @@ block content
                 a(href="#") 产品
         block tree_content
 block js
+    script(src="/javascripts/util/fillForm.js")
     script(src="/javascripts/main/index.js")
