--- a/admin/views/main/order_in.pug
+++ b/admin/views/main/order_in.pug
@@ -13,7 +13,7 @@ block tree_content
                 div(class="layui-form-item w-40")
                     label(class="layui-form-label") 创建时间
                     div(class="layui-input-block")
-                        input(type="text" class="layui-input" name="createtime" data-target="datepicker" autocomplete="off")
+                        input(type="text" class="layui-input" lay-verify="date" name="createtime" data-target="datepicker" autocomplete="off")
             div(class="d-flex justify-content-center")
                 div(class="layui-form-item w-40")
                     label(class="layui-form-label") 创建状态
@@ -23,7 +23,7 @@ block tree_content
                 div(class="layui-form-item w-40")
                     label(class="layui-form-label") 完成时间
                     div(class="layui-input-block")
-                        input(type="text" class="layui-input" name="finishtime" data-target="datepicker1" autocomplete="off")
+                        input(type="text" class="layui-input" lay-verify="date" name="finishtime" data-target="datepicker1" autocomplete="off")
             div(class="d-flex justify-content-center")
                 div(class="layui-form-item w-40")
                     label(class="layui-form-label") 订单利润
