index.pug don't finfish

--- a/admin/views/component/tablePage.pug
+++ b/admin/views/component/tablePage.pug
@@ -3,7 +3,7 @@ extends ./index
 block tree_content
     div(class="tree_content")
         table(id="demo" lay-filter="orderInto")
-        form(class="layui-form mt-4 modal" action="/order/add" method="post")
+        form(class="layui-form mt-4 modal" action="/bill/add" method="post")
             input(type="hidden" name="id")
             div(class="d-flex justify-content-center")
                 div(class="layui-form-item w-40")
